# api/controllers/user.js
@@ -8,15 +8,18 @@ const db = new DB();
 db.connect();
 module.exports = {
   addUser: addUser,
-  getUsers: getUsers
+  getUsers: getUsers,
+  getUserById: getUserById,
+  updateUser: updateUser,
+  deleteUser: deleteUser
 };
 
 function addUser(req, res) {
-    let newUser = new User(req.swagger.params.name.value);
+    let newUser = new User(req.swagger.params.user.value);
 
     newUser.save(function (err, newUser) {
         if (err) return console.error(err);
-        res.json("User created successfully");
+        res.json('User created successfully. ID: ' + newUser._id);
     });
 }
 
@@ -28,10 +31,29 @@ function getUsers(req, res) {
 }
 
 function getUserById(req, res) {
-    let id = req.swagger.params.name.value;
+    let id = req.swagger.params._id.value;
 
-    User.findOne({'_id': id},function (err, users) {
+    User.findOne({'_id': id},function (err, user) {
         if (err) return console.error(err);
-        res.json(users);
+        res.json(user);
+    });
+}
+
+function updateUser(req, res) {
+    let id = req.swagger.params._id.value,
+        user = req.swagger.params.user.value;
+
+    User.update({'_id': id}, user, function(err){
+        if (err) return console.error(err);
+        res.json('User updated successfully. ID: ' + id);
+    });
+}
+
+function deleteUser(req, res) {
+    let id = req.swagger.params._id.value;
+
+    User.findByIdAndRemove({'_id': id}, function(err) {
+        if (err) return console.error(err);
+        res.json('User removed.');
     });
 }
